--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply bg-blue-600 px-4 py-2 text-lg rounded-xl shadow-sm shadow-black/45 hover:bg-blue-700 text-white;
+    };
+    .btn-danger {
+        @apply bg-rose-600 px-4 py-2 text-lg rounded-xl hover:shadow-sm hover:shadow-black/45 hover:bg-rose-700 text-white;
+    };
+}
